# KnowledgePipe

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  docker-compose.yml  pytest.ini
.github/workflows/: ci.yml
.opencode/skills/: interview.md
nginx/: default.conf
orchestrator/: Dockerfile  pyproject.toml
orchestrator/src/: __init__.py  config.py  database.py
orchestrator/src/api/: __init__.py  feeds.py  health.py  main.py
orchestrator/src/clients/: __init__.py  opennotebook.py  readeck.py
orchestrator/src/jobs/: audio_uploader.py  rss_fetcher.py  weekly_sync.py
tests/: __init__.py  conftest.py  test_database.py
tests/integration/: __init__.py  docker-compose.test.yml  test_e2e.py
tests/integration/mocks/opennotebook/mappings/: create_notebook.json  create_source.json  download_audio.json  generate_podcast.json  health.json  job_status.json  list_episodes.json  list_notebooks.json  source_status.json
tests/integration/mocks/readeck/mappings/: bookmark_content.json  bookmarks.json  create_bookmark.json  health.json
tests/test_api/: __init__.py  test_feeds.py  test_health.py
tests/test_clients/: __init__.py  test_opennotebook.py  test_readeck.py
tests/test_jobs/: __init__.py  test_audio_uploader.py  test_rss_fetcher.py  test_weekly_sync.py
