[tool.poetry]
name = "weekly-digest-orchestrator"
version = "0.1.0"
description = "Orchestrator for Weekly Digest - RSS to Podcast automation"
authors = ["Weekly Digest Team"]
packages = [{include = "src"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31"
tenacity = "^8.2"
pydantic = "^2.5"
pydantic-settings = "^2.1"
structlog = "^24.1"
fastapi = "^0.109"
uvicorn = {extras = ["standard"], version = "^0.27"}
apscheduler = "^3.10"
feedparser = "^6.0"
feedgen = "^1.0"
sqlalchemy = "^2.0"
boto3 = "^1.34"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-mock = "^3.12"
pytest-cov = "^4.1"
pytest-asyncio = "^0.23"
responses = "^0.24"
httpx = "^0.26"
ruff = "^0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring Docker",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
